src/objects/WebService_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>OMS_Endpoint__c</fullName>
        <label>OMS Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Enviroment__c</fullName>
        <inlineHelpText>INT = Integration test, 
‘blank’ = Production</inlineHelpText>
        <label>OMS Enviroment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Task_Parameter__c</fullName>
        <label>OMS Task Parameter</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenderDetailPostRecordLimit__c</fullName>
        <label>TenderDetailPostRecordLimit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionDetailPostRecordLimit__c</fullName>
        <label>TransactionDetailPostRecordLimit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WebService Settings</label>
</CustomObject>